force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Group__c/LLC_BI__Spread_Statement_Record_Group__c.object-meta.xml
<CustomObject>
    <label>-D Spread Statement Record Group</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Record Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Spread Statement Record Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>