force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Group__c/fields/LLC_BI__Is_Linked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Linked__c</fullName>
    <formula>LLC_BI__Spread_Statement_Record__r.LLC_BI__Is_Linked__c</formula>
    <label>Is Linked</label>
    <type>Checkbox</type>
</CustomField>