force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Group__c/fields/LLC_BI__Name_Override__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Name_Override__c</fullName>
    <label>Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>