force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Group__c/fields/LLC_BI__Spread_Statement_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
    <label>Spread Statement Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipName>Spread_Statement_Record_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>