force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Group__c/fields/LLC_BI__Year_Out_Range__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Year_Out_Range__c</fullName>
    <formula>IF(OR(LLC_BI__Year__c &gt; Year( LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),LLC_BI__Year__c &lt; Year( LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Out Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>